--- a/DestinyCasts/app/build.gradle
+++ b/DestinyCasts/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.google.code.gson:gson:2.6.2'
+    compile 'com.squareup.okhttp3:okhttp:3.2.0'
 }
