--- a/DestinyCasts/app/build.gradle
+++ b/DestinyCasts/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.einmalfel:earl:1.0.0'
 }
