WIP added all data to ContentProvider -- need steltho and testing

--- a/DestinyCasts/app/src/main/AndroidManifest.xml
+++ b/DestinyCasts/app/src/main/AndroidManifest.xml
@@ -28,7 +28,7 @@
 
         <provider
             android:authorities="@string/content_authority"
-            android:name=".data.PodcastsProvider"
+            android:name=".data.PodcastProvider"
             android:exported="false"
             android:syncable="true"/>
     </application>
