--- a/DestinyCasts/app/build.gradle
+++ b/DestinyCasts/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.einmalfel:earl:1.0.0'
+    compile 'com.facebook.stetho:stetho:1.3.1'
 }
