--- a/DestinyCasts/app/build.gradle
+++ b/DestinyCasts/app/build.gradle
@@ -30,4 +30,5 @@ dependencies {
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
     compile 'com.einmalfel:earl:1.0.0'
     compile 'com.facebook.stetho:stetho:1.3.1'
+    compile 'com.google.android.gms:play-services-ads:8.4.0'
 }
