--- a/DestinyCasts/app/src/main/AndroidManifest.xml
+++ b/DestinyCasts/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="me.noahpatterson.destinycasts">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
         android:allowBackup="true"
@@ -45,7 +46,7 @@
         <service
             android:name=".service.PlayerService"
             android:enabled="true"
-            android:exported="false"></service>
+            android:exported="false" />
 
         <receiver android:name=".EpisodeWidget">
             <intent-filter>
@@ -56,6 +57,10 @@
                 android:name="android.appwidget.provider"
                 android:resource="@xml/episode_widget_info" />
         </receiver>
+        <!-- This meta-data tag is required to use Google Play Services. -->
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
     </application>
 
 </manifest>
