--- a/DestinyCasts/app/build.gradle
+++ b/DestinyCasts/app/build.gradle
@@ -32,5 +32,6 @@ dependencies {
     compile 'com.einmalfel:earl:1.0.0'
     compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'com.google.android.gms:play-services-ads:8.3.0'
+    compile 'com.google.android.gms:play-services-measurement:8.3.0'
     compile 'com.google.android.gms:play-services-analytics:8.3.0'
 }
