--- a/DestinyCasts/app/build.gradle
+++ b/DestinyCasts/app/build.gradle
@@ -2,9 +2,18 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.google.gms.google-services'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'android_keystore'
+//            removed key password for github
+            keyPassword ''
+            storeFile file("$rootDir/keystore.jks")
+//            removed store password for github
+            storePassword ''
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
-
     defaultConfig {
         applicationId "me.noahpatterson.destinycasts"
         minSdkVersion 19
@@ -15,7 +24,9 @@ android {
     buildTypes {
         release {
             minifyEnabled false
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
     }
 }
@@ -29,8 +40,9 @@ dependencies {
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.google.code.gson:gson:2.6.2'
     compile 'com.squareup.okhttp3:okhttp:3.2.0'
+    compile 'com.squareup.okio:okio:1.8.0'
     compile 'com.einmalfel:earl:1.0.0'
-    compile 'com.facebook.stetho:stetho:1.3.1'
+//    compile 'com.facebook.stetho:stetho:1.3.1'
     compile 'com.google.android.gms:play-services-ads:8.3.0'
     compile 'com.google.android.gms:play-services-measurement:8.3.0'
     compile 'com.google.android.gms:play-services-analytics:8.3.0'
