--- a/DestinyCasts/app/src/main/AndroidManifest.xml
+++ b/DestinyCasts/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:name=".AnalyticsApplication">
+        android:name=".AnalyticsApplication"
+        >
         <activity
             android:name=".WeeklyListActivity"
             android:label="@string/app_name"
@@ -22,7 +23,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChooseIntroActivity" />
+        <activity android:name=".ChooseIntroActivity"
+            android:label="@string/action_settings"/>
 
         <service
             android:name=".FetchPodcastFeedsIntentService"
